ajust template, apiview

--- a/bradoo/core/templates/core/create_product.html
+++ b/bradoo/core/templates/core/create_product.html
@@ -23,8 +23,10 @@
                 {% endfor %}
             {% endif %}
         {% endfor %}
-        <div class="col-md-4">
-            <button class="btn btn-primary btn-block" type="submit">Save</button>
+        <div class="row justify-content-left">
+            <div class="col-md-2">
+                <button class="btn btn-primary btn-block" type="submit">Save</button>
+            </div>
         </div>
     </form>
 {% endblock %}
