--- a/bradoo/core/templates/core/edit_product.html
+++ b/bradoo/core/templates/core/edit_product.html
@@ -24,7 +24,7 @@
                 {% endfor %}
             {% endif %}
         {% endfor %}
-        <div class="row justify-content-end">
+        <div class="row justify-content-left">
             <div class="col-md-2">
                 <button class="btn btn-primary btn-block" type="submit">Save</button>
             </div>
