--- a/bradoo/core/templates/core/vendors_list.html
+++ b/bradoo/core/templates/core/vendors_list.html
@@ -2,84 +2,85 @@
 
 {% block content %}
 
-    <div class="row">
-        <div class="col-md-9">
-            <h4>Search Vendor</h4>
-        <form class="form-inline" method="get" action="/vendors/">
-            {% csrf_token %}
-            <div class="form-group">
-                <label for="id_name">Name:</label><br>
-                <input type="text" name="name" id="id_title">
-            </div>
-            <div class="form-group">
-                <label for="id_cnpj">CNPJ:</label><br>
-                <input type="text" name="cnpj" id="id_title">
-            </div>
-            <div class="form-group">
-                <label for="id_title">City:</label><br>    
-                <input type="text" name="city" id="id_title">
-            </div>
-            <div class="col-md-12"><br>
-                <input type="submit" name="" value="Search" class="button">
-            </div>
-        </form>
-        </div> 
-        <div class="col-md-9">
-            <h4>Vendor List</h4>
+    
+    <div class="col-md-9">
+        <h4>Search Vendor</h4>
+        
+    <form class="form-inline" method="get" action="/vendors/">
+        {% csrf_token %}
+        <div class="form-group">
+            <label for="id_name">Name:</label><br>
+            <input class="form-control mb-2 mr-sm-2" type="text" name="name" id="id_title">
         </div>
-        <form action="{% url 'delete_vendor_section'%}" method="POST">
-            {% csrf_token %}
-            <div class="actions">
-                <label>Action: <select name="action" required="">
-                <option value="" selected="">---------</option>
-                <option value="delete_selected">Delete selected vendors</option>
-                </select></label><input type="hidden" name="select_across" value="0" class="select-across">
-                <button type="submit" class="button" title="Run the selected action" name="index" value="0">Go</button>
-            </div>
-            <div class="col-md-9">
-                <table class="table table-striped table-bordered">
-                    <div class="col-md-3">
-                        <a class="btn btn-primary btn-block" href="{% url 'create-vendor'%}">Create a Vendor</a>
-                    </div>    
-                    <thead>
+        <div class="form-group">
+            <label for="id_cnpj">CNPJ:</label><br>
+            <input class="form-control mb-2 mr-sm-2" type="text" name="cnpj" id="id_title">
+        </div>
+        <div class="form-group">
+            <label for="id_title">City:</label><br>    
+            <input class="form-control mb-2 mr-sm-2" type="text" name="city" id="id_title">
+        </div>
+        <div class="col-md-12"><br>
+            <input type="submit" class="btn btn-primary mb-2" value="Search">
+        </div>
+    </form>
+    </div> 
+    <div class="col-md-9">
+        <h4>Vendor List</h4>
+    </div>
+    <form action="{% url 'delete_vendor_section'%}" method="POST">
+        {% csrf_token %}
+        <div class="col-md-9">
+            <label>Action: <select name="action" required="">
+            <option value="" selected="">---------</option>
+            <option value="delete_selected">Delete selected vendors</option>
+            </select></label><input type="hidden" name="select_across" value="0" class="select-across">
+            <button type="submit" class="btn btn-primary">Go</button>
+        </div>
+        <div class="col-md-9">
+            <table class="table table-striped table-bordered">
+                <div class="col-md-6">
+                    <a class="btn btn-primary btn-block" href="{% url 'create-vendor'%}">Add Vendor</a>
+                </div>    
+                <thead>
+                    <tr>
+                        <th scope="col" class="action-checkbox-column">
+                            <div class="text"><span>
+                                <input type="checkbox" id="action-toggle"></span>
+                            </div>
+                            <div class="clear"></div>
+                        </th>
+                        <th>Name</th>
+                        <th>CNPJ</th>
+                        <th>City</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for obj in page_obj %}
                         <tr>
-                            <th scope="col" class="action-checkbox-column">
-                                <div class="text"><span>
-                                    <input type="checkbox" id="action-toggle"></span>
+                            <td><input type="checkbox" name="vendors" value="{{ obj.id }}"></td>
+                            <td>{{ obj.name }}</td>
+                            <td>{{ obj.cnpj }}</td>
+                            <td>{{ obj.city }}</td>
+                            <td>
+                                <div class="btn-group" role="group" aria-label="Basic example">
+                                    <a href="{% url 'edit-vendor' obj.pk %}" class="btn btn-warning"><i class="fas fa-edit"></i></a>
+                                    <a href="{% url 'delete-vendor' obj.pk %}" class="btn btn-danger"><i class="fas fa-trash-alt"></i></a>
                                 </div>
-                                <div class="clear"></div>
-                            </th>
-                            <th>Name</th>
-                            <th>CNPJ</th>
-                            <th>City</th>
-                            <th>Actions</th>
+                            </td>
                         </tr>
-                    </thead>
-                    <tbody>
-                        {% for obj in page_obj %}
-                            <tr>
-                                <td><input type="checkbox" name="vendors" value="{{ obj.id }}"></td>
-                                <td>{{ obj.name }}</td>
-                                <td>{{ obj.cnpj }}</td>
-                                <td>{{ obj.city }}</td>
-                                <td>
-                                    <div class="btn-group" role="group" aria-label="Basic example">
-                                        <a href="{% url 'edit-vendor' obj.pk %}" class="btn btn-warning"><i class="fas fa-edit"></i></a>
-                                        <a href="{% url 'delete-vendor' obj.pk %}" class="btn btn-danger"><i class="fas fa-trash-alt"></i></a>
-                                    </div>
-                                </td>
-                            </tr>
-                            
-                        {% empty %}
-                            <tr>
-                                <td colspan=5 class="text-center">
-                                    There is no vendors to be listened.
-                                </td>
-                            </tr>    
-                        {% endfor%}    
-                    </tbody>
-                </table>
-            </div>
-        </form>    
-    </div>  
+                        
+                    {% empty %}
+                        <tr>
+                            <td colspan=5 class="text-center">
+                                There is no vendors to be listened.
+                            </td>
+                        </tr>    
+                    {% endfor%}    
+                </tbody>
+            </table>
+        </div>
+    </form>    
+    
 {% endblock %} 
