--- a/bradoo/core/templates/core/vendors_list.html
+++ b/bradoo/core/templates/core/vendors_list.html
@@ -2,29 +2,27 @@
 
 {% block content %}
 
-    
-    <div class="col-md-9">
-        <h4>Search Vendor</h4>
-        
-    <form class="form-inline" method="get" action="/vendors/">
-        {% csrf_token %}
-        <div class="form-group">
-            <label for="id_name">Name:</label><br>
-            <input class="form-control mb-2 mr-sm-2" type="text" name="name" id="id_title">
-        </div>
-        <div class="form-group">
-            <label for="id_cnpj">CNPJ:</label><br>
-            <input class="form-control mb-2 mr-sm-2" type="text" name="cnpj" id="id_title">
-        </div>
-        <div class="form-group">
-            <label for="id_title">City:</label><br>    
-            <input class="form-control mb-2 mr-sm-2" type="text" name="city" id="id_title">
-        </div>
-        <div class="col-md-12"><br>
-            <input type="submit" class="btn btn-primary mb-2" value="Search">
-        </div>
-    </form>
-    </div> 
+    <div class="col-md-9" id="search">
+        <h4>Search Vendor</h4>   
+            <form class="form-inline" method="get" action="/vendors/">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="id_name">Name:</label><br>
+                <input class="form-control mb-2 mr-sm-2" type="text" name="name" id="id_title" placeholder="Name">
+            </div>
+            <div class="form-group">
+                <label for="id_cnpj">CNPJ:</label><br>
+                <input class="form-control mb-2 mr-sm-2" type="text" name="cnpj" id="id_title" placeholder="CNPJ">
+            </div>
+            <div class="form-group">
+                <label for="id_title">City:</label><br>    
+                <input class="form-control mb-2 mr-sm-2" type="text" name="city" id="id_title" placeholder="City">
+            </div>
+            <div class="col-md-12"><br>
+                <input type="submit" class="btn btn-primary mb-2" value="Search">
+            </div>
+        </form>
+    </div>
     <div class="col-md-9">
         <h4>Vendor List</h4>
     </div>
@@ -40,13 +38,13 @@
         <div class="col-md-9">
             <table class="table table-striped table-bordered">
                 <div class="col-md-6">
-                    <a class="btn btn-primary btn-block" href="{% url 'create-vendor'%}">Add Vendor</a>
+                    <a class="btn btn-primary btn-block" href="{% url 'create-vendor'%}">Add Vendor</a><br>
                 </div>    
                 <thead>
                     <tr>
                         <th scope="col" class="action-checkbox-column">
                             <div class="text"><span>
-                                <input type="checkbox" id="action-toggle"></span>
+                                <input type="checkbox" id="action-toggle" onclick="vendors_toggle(this)"></span>
                             </div>
                             <div class="clear"></div>
                         </th>
@@ -66,7 +64,6 @@
                             <td>
                                 <div class="btn-group" role="group" aria-label="Basic example">
                                     <a href="{% url 'edit-vendor' obj.pk %}" class="btn btn-warning"><i class="fas fa-edit"></i></a>
-                                    <a href="{% url 'delete-vendor' obj.pk %}" class="btn btn-danger"><i class="fas fa-trash-alt"></i></a>
                                 </div>
                             </td>
                         </tr>
@@ -82,5 +79,4 @@
             </table>
         </div>
     </form>    
-    
 {% endblock %} 
